# AstraAI

./: .gitignore  AstraAI.bat  README.md  Uninstall_AstraAI.bat  app.py  build_apk.py  build_conv_corpus.py  check_syntax.py  corpus_ru.txt  create_release.py  install.ps1  installer.iss  intro_script.md  main.py  make_intro.py  make_intro_v2.py  make_voiceover.py  merge_audio.py  push_to_github.ps1  pyproject.toml  requirements.txt  runner.py  training.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
android/app/src/main/cpp/: CMakeLists.txt  engine_core.h  native-lib.cpp
android/app/src/main/java/com/example/aiengine/: AiModel.kt  MainActivity.kt
data/: assistant.db-shm  assistant.db-wal
data/memory/: episodic.json  long_term.json  procedural.json  semantic.json
docs/: index.html
logs/: 2026_06_22__05_03_07__DESKTOP-FOJJTOJ_log.txt  2026_06_22__05_03_09__DESKTOP-FOJJTOJ_state.snp  2026_06_22__05_03_12__DESKTOP-FOJJTOJ_state.snp
modules/: __init__.py  ai_engine.py  analytics_widget.py  api_server.py  arena.py  assistant.py  auto_update.py  chat_engine.py  chat_models.py  chat_widget.py  clipboard_monitor.py  cloud_sync.py  cognitive_pipeline.py  core_model.py  dashboard_widget.py  desktop_widgets.py  desktop_widgets_overlay.py  dialogs.py  dialogue_engine.py  emotion_engine.py  engine.py  first_run_wizard.py  fractal_processor.py  graph.py  home_assistant.py  hotkey_manager.py  i18n.py  intents.py  kernels.py  knowledge_graph.py  local_llm.py  mcp_server.py  memory_system.py  notes_widget.py  plugin_base.py  plugin_market.py  plugins_core.py  portable.py  samplers.py  search.py  (+14 more)
modules/web_ui/: index.html  landing.html
plugins/: ip_address.py
tests/: conftest.py  test_ai_engine.py  test_api_server.py  test_arena.py  test_assistant.py  test_auto_update.py  test_chat_engine.py  test_chat_models.py  test_chat_widget_md.py  test_clipboard_monitor.py  test_cloud_sync.py  test_cognitive_pipeline.py  test_core_model.py  test_desktop_widgets.py  test_dialogue.py  test_dialogue_engine.py  test_emotion_engine.py  test_engine.py  test_fractal_processor.py  test_graph.py  test_home_assistant.py  test_hotkey_manager.py  test_i18n.py  test_integration_pipeline.py  test_intents.py  test_kernels.py  test_knowledge_graph.py  test_local_llm.py  test_mcp_server.py  test_memory_system.py  test_plugin_base.py  test_plugin_market.py  test_plugins_core.py  test_portable.py  test_samplers.py  test_search.py  test_semantic_engine.py  test_smart_notifications.py  test_storage.py  test_telegram_bot.py  (+5 more)
