[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "astra-ai"
version = "2.2.0"
description = "Astra AI — когнитивный голосовой ассистент с адаптивным мышлением, эмоциональным интеллектом и графом знаний"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Astra AI Team"},
]

keywords = ["assistant", "ai", "voice", "windows", "gemini", "cognitive", "emotion"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PySide6>=6.5",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
    "psutil>=5.9",
    "pyautogui>=0.9",
    "pyperclip>=1.8",
    "duckduckgo_search>=6.0",
    "requests>=2.28",
    "google-genai>=1.0",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/astra-ai/astra"
Documentation = "https://astra-ai.dev"
Source = "https://github.com/astra-ai/astra"
Tracker = "https://github.com/astra-ai/astra/issues"

[project.scripts]
astra = "app:main"

[tool.setuptools.packages.find]
include = ["modules*", "ai_engine*", "plugins*"]
exclude = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
"*" = ["*.ttf", "*.json", "*.onnx", "*.cpp", "CMakeLists.txt", "*.bat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["E501", "E402", "S101"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "codespell>=2.0",
]

[tool.codespell]
skip = "*.pyc,*.db,*.json,data/*"
